--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gadgets</title>
+    <title>Techzones</title>
     <!-- BS5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -21,7 +21,18 @@
 </head>
 
 <body>
-
+    <!-- HEADER -->
+    <header></header>
+    <!-- COVER -->
+    <section class="cover"></section>
+    <!-- CATEGORY -->
+    <section class="category"></section>
+    <!-- NUMBER -->
+    <section class="number"></section>
+    <!-- OFFER -->
+    <section class="offer"></section>
+    <!-- FEATURED -->
+    <section class="featured"></section>
 
 
 
@@ -31,6 +42,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <!-- MAIN JS -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
