--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Techzones</title>
+    <title>Gadgets</title>
     <!-- BS5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -33,7 +33,14 @@
     <section class="offer"></section>
     <!-- FEATURED -->
     <section class="featured"></section>
-
+    <!-- IPAD -->
+    <section class="ipad"></section>
+    <!-- INFOR -->
+    <section class="infor"></section>
+    <!-- NEWS -->
+    <section class="news"></section>
+    <!-- FOOTER -->
+    <footer></footer>
 
 
     <!-- jquery -->
