--- a/index.html
+++ b/index.html
@@ -22,9 +22,141 @@
 
 <body>
     <!-- HEADER -->
-    <header></header>
+    <header>
+        <div class="header__top">
+            <nav class="gadgetsNavbar navbar navbar-expand-lg">
+                <div class="container">
+                    <a class="navbar-brand" href="#"><img src="./img/logo-light.svg" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#gadgetsNavbarContent" aria-controls="gadgetsNavbarContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="gadgetsNavbarContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">TIN TỨC</a>
+                            </li>
+                            <li class="nav-item ms-2">
+                                <a class="nav-link" href="#">THƯƠNG HIỆU</a>
+                            </li>
+                        </ul>
+                        <form class="header__form d-flex" role="search">
+                            <input class="header__input" type="search" placeholder="Nhập sản phẩm tìm kiếm..."
+                                aria-label="Search">
+                            <button class="header__btn" type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                        <div class="header__right d-flex">
+                            <div class="right-check">
+                                <a class="right-link" href="">
+                                    <i class="fa fa-clipboard-list"></i>
+                                    <span>Kiểm tra đơn hàng</span>
+                                </a>
+                            </div>
+                            <div class="right-login">
+                                <a class="right-link" href="">
+                                    <i class="fa fa-user"></i>
+                                </a>
+                            </div>
+                            <div class="right-cart">
+                                <a class="right-link" href="">
+                                    <i class="fa fa-shopping-cart"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="header__bottom">
+            <nav class="header__menu">
+                <div class="container">
+                    <ul class="menu-list d-flex">
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Tự build PC</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Máy tính xách tay</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Điện thoại</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Đồng hồ thông minh</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Tai nghe</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Máy nghe nhạc</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Camera</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Máy đọc sách</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href=""><span>Phụ kiện</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
     <!-- COVER -->
-    <section class="cover"></section>
+    <section class="cover">
+        <div class="container">
+            <div class="cover__content">
+                <div class="cover__top">
+                    <div class="cover__info">
+                        <div class="cover__text">
+                            <p>Chỉ từ 35.000.000<span class="vnd">đ</span></p>
+                            <h2>iPhone 15 Pro</h2>
+                        </div>
+                        <div class="cover__btn">
+                            <button class="btn--buy">Mua Ngay</button>
+                        </div>
+                    </div>
+                    <div class="cover__img">
+                        <img class="img-fluid" src="./img/home-hero-image.jpg" alt="">
+                    </div>
+                </div>
+                <div class="cover__bottom">
+                    <div class="cover__block">
+                        <div class="cover__item">
+                            <div class="cover__svg"></div>
+                            <div class="cover__benefit">
+                                <h6></h6>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="cover__item">
+                            <div class="cover__svg"></div>
+                            <div class="cover__benefit">
+                                <h6></h6>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="cover__item">
+                            <div class="cover__svg"></div>
+                            <div class="cover__benefit">
+                                <h6></h6>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="cover__item">
+                            <div class="cover__svg"></div>
+                            <div class="cover__benefit">
+                                <h6></h6>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- CATEGORY -->
     <section class="category"></section>
     <!-- NUMBER -->
