--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a class="nav-link" href="#">TIN TỨC</a>
                             </li>
                             <li class="nav-item ms-2">
-                                <a class="nav-link" href="#">THƯƠNG HIỆU</a>
+                                <a class="nav-link" href="#">SẢN PHẨM</a>
                             </li>
                         </ul>
                         <form class="header__form d-flex" role="search">
@@ -61,6 +61,11 @@
                             <div class="right-cart">
                                 <a class="right-link" href="">
                                     <i class="fa fa-shopping-cart"></i>
+                                </a>
+                            </div>
+                            <div class="right-light">
+                                <a class="right-link" href="">
+                                    <i class="fa fa-moon"></i>
                                 </a>
                             </div>
                         </div>
@@ -119,37 +124,69 @@
                         </div>
                     </div>
                     <div class="cover__img">
-                        <img class="img-fluid" src="./img/home-hero-image.jpg" alt="">
+                        <img class="img-fluid" src="./img/iphone-img.png" alt="">
                     </div>
                 </div>
                 <div class="cover__bottom">
                     <div class="cover__block">
                         <div class="cover__item">
-                            <div class="cover__svg"></div>
+                            <div class="cover__svg">
+                                <svg class="ugb-custom-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"
+                                    style="enable-background:new 0 0 50 50" xml:space="preserve" aria-hidden="true"
+                                    width="40" height="40">
+                                    <path
+                                        d="m49.7 24.9-2.9-3.8-4.8-9.4c-.3-.5-.8-.9-1.4-.9h-6.7V9.2c0-.9-.7-1.6-1.6-1.6H6c-.9 0-1.6.7-1.6 1.6s.7 1.6 1.6 1.6h24.7v11c0 .9.7 1.6 1.6 1.6h12.3l2.3 3v8.1h-3c-.7-2.7-3.2-4.8-6.1-4.8-3 0-5.4 2-6.1 4.8h-9.3c-.7-2.7-3.2-4.8-6.1-4.8-3 0-5.4 2-6.1 4.8H6c-.9 0-1.6.7-1.6 1.6s.7 1.6 1.6 1.6h4.1c.7 2.7 3.2 4.7 6.1 4.7 2.9 0 5.4-2 6.1-4.7h9.4c.7 2.7 3.2 4.7 6.1 4.7 2.9 0 5.4-2 6.1-4.7h4.6c.9 0 1.6-.7 1.6-1.6V25.8c-.1-.3-.2-.6-.4-.9zM33.9 14h5.8l3.2 6.3H34V14zM16.2 39.2c-1.7 0-3.2-1.4-3.2-3.2 0-1.7 1.4-3.2 3.2-3.2 1.7 0 3.2 1.4 3.2 3.2 0 1.8-1.4 3.2-3.2 3.2zM40.9 36c0 1.7-1.4 3.2-3.1 3.2-1.7 0-3.2-1.4-3.2-3.1s1.4-3.2 3.1-3.2c1.8 0 3.2 1.4 3.2 3.1zm-29.5-6.3H4.1c-.9 0-1.6-.7-1.6-1.6s.7-1.6 1.6-1.6h7.2c.9 0 1.6.7 1.6 1.6s-.6 1.6-1.5 1.6zm3.6-6.2H1.6c-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6H15c.9 0 1.6.7 1.6 1.6 0 .9-.7 1.6-1.6 1.6zM2.6 15.7c0-.9.7-1.6 1.6-1.6h13.4c.9 0 1.6.7 1.6 1.6s-.7 1.6-1.6 1.6H4.1c-.8 0-1.5-.7-1.5-1.6z">
+                                    </path>
+                                </svg>
+                            </div>
                             <div class="cover__benefit">
-                                <h6></h6>
-                                <p></p>
+                                <h6>Miễn phí vận chuyển</h6>
+                                <p>Miễn phí vận chuyển trên toàn quốc</p>
                             </div>
                         </div>
                         <div class="cover__item">
-                            <div class="cover__svg"></div>
+                            <div class="cover__svg">
+                                <svg class="ugb-custom-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"
+                                    style="enable-background:new 0 0 50 50" xml:space="preserve" aria-hidden="true"
+                                    width="40" height="40">
+                                    <path
+                                        d="M49.6 33.2 40.5 45l-10 5H.5v-3.1h29.3l8.7-4.4 6.4-8.3c-2.6-.8-5.5.1-7.2 2.2l-1.9 2.4-8.5 3.4H19c-1.1 0-2.2-.6-2.7-1.6-.8-1.5-.3-3.4 1.2-4.2l5.3-2.9s.1 0 .1-.1c1-.6 1.3-1.8.9-2.8-.5-1.1-1.9-1.6-3-1.1l-6.9 3.2L9 37.6H.4v-3.1h7.2L12 30l1.3-.6c-5-4.9-6.4-12.3-3.8-18.8C13.2 1.8 23.2-2.3 32 1.3l-1.2 2.9c-5.7-2.3-12.2-.7-16.1 3.9-5 5.9-4.2 14.8 1.7 19.8l3-1.4c2.5-1.1 5.4-.3 6.8 2 .5.8.7 1.7.8 2.6.3 0 .6-.1 1-.1 7.6-1.4 12.7-8.7 11.3-16.3l3.1-.6c.2 1 .3 2 .3 3.1 0 9.2-7.3 16.8-16.5 17.2-.5.7-1.1 1.4-1.9 1.8L19 39.1h7.7l7.1-2.9 1.4-1.7c3.1-3.9 8.7-4.8 12.9-2.2l1.5.9zM38.5 12l2.9-1.1c-.4-1.1-1-2.1-1.6-3l-2.6 1.7c.5.7.9 1.5 1.3 2.4zm-.8-6.9c-.9-.8-1.7-1.5-2.7-2.2l-1.7 2.6c.8.5 1.5 1.1 2.2 1.8l2.2-2.2zM25.5 21.9s-.1 0 0 0h-4.8V25h4.7c2.6 0 4.7-2 4.8-4.6 0-2.6-2-4.7-4.6-4.8h-.1c-.9 0-1.6-.7-1.6-1.5 0-.9.7-1.6 1.5-1.6h4.8V9.4H27V6.3h-3.1v3.4c-2.4.9-3.7 3.5-2.9 6 .7 1.9 2.4 3.1 4.4 3.1.9 0 1.6.7 1.6 1.5s-.6 1.6-1.5 1.6z">
+                                    </path>
+                                </svg>
+                            </div>
                             <div class="cover__benefit">
-                                <h6></h6>
-                                <p></p>
+                                <h6>Hoàn tiền 100%</h6>
+                                <p>Bạn được đổi trả trong 10 ngày</p>
                             </div>
                         </div>
                         <div class="cover__item">
-                            <div class="cover__svg"></div>
+                            <div class="cover__svg">
+                                <svg class="ugb-custom-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"
+                                    style="enable-background:new 0 0 50 50" xml:space="preserve" aria-hidden="true"
+                                    width="40" height="40">
+                                    <path
+                                        d="M50 25c0 5.6-1.9 11.1-5.4 15.5C36 51.3 20.3 53.2 9.5 44.6S-3.2 20.3 5.4 9.5 29.7-3.2 40.5 5.4c.9.7 1.1 2 .3 2.9-.7.9-2 1.1-2.9.3-3.6-2.9-8.2-4.4-12.9-4.4C13.5 4.2 4.2 13.5 4.2 25S13.5 45.8 25 45.8 45.8 36.5 45.8 25c0-3.1-.7-6.2-2.1-9.1-.5-1-.1-2.3 1-2.8 1-.5 2.3-.1 2.8 1C49.2 17.5 50 21.2 50 25zM25 8.3c-1.2 0-2.1.9-2.1 2.1V25c0 1.2.9 2.1 2.1 2.1h10.4c1.2 0 2.1-.9 2.1-2.1 0-1.2-.9-2.1-2.1-2.1h-8.3V10.4c0-1.1-.9-2.1-2.1-2.1z">
+                                    </path>
+                                </svg>
+                            </div>
                             <div class="cover__benefit">
-                                <h6></h6>
-                                <p></p>
+                                <h6>Hỗ trợ 24/7</h6>
+                                <p>Liên hệ với chúng tôi 24h</p>
                             </div>
                         </div>
                         <div class="cover__item">
-                            <div class="cover__svg"></div>
+                            <div class="cover__svg">
+                                <svg class="ugb-custom-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"
+                                    style="enable-background:new 0 0 50 50" xml:space="preserve" aria-hidden="true"
+                                    width="40" height="40">
+                                    <path
+                                        d="M22.7 32c0 1.1-.9 2-2 2H5.9C2.6 33.9 0 31.3 0 28V8.5c0-3.2 2.6-5.9 5.9-5.9h34.4c3.2 0 5.9 2.6 5.9 5.9v5.2c0 1.1-.9 2-2 2s-2-.9-2-2V8.5c0-1.1-.9-2-2-2H5.9c-1.1 0-2 .9-2 2V28c0 1.1.9 2 2 2h14.8c1.1 0 2 .9 2 2zM50 32v13.4c0 1.1-.9 2-2 2H28.5c-1.1 0-2-.9-2-2V32c0-1.1.9-2 2-2h2v-3.9c0-4.3 3.5-7.8 7.8-7.8s7.8 3.5 7.8 7.8V30h2c1 0 1.9.9 1.9 2zm-15.6-2h7.8v-3.9c0-2.2-1.7-3.9-3.9-3.9s-3.9 1.7-3.9 3.9V30zm11.7 13.4v-9.5H30.5v9.5h15.6zM17.6 10.5c1.1 0 2 .9 2 2v7.8c0 1.1-.9 2-2 2H9.8c-1.1 0-2-.9-2-2v-7.8c0-1.1.9-2 2-2h7.8zm-2 7.8v-3.9h-3.9v3.9h3.9z">
+                                    </path>
+                                </svg>
+                            </div>
                             <div class="cover__benefit">
-                                <h6></h6>
-                                <p></p>
+                                <h6>100% bảo mật thanh toán</h6>
+                                <p>Thanh toán của bạn được bảo mật</p>
                             </div>
                         </div>
                     </div>
@@ -157,10 +194,35 @@
             </div>
         </div>
     </section>
-    <!-- CATEGORY -->
-    <section class="category"></section>
+    <!-- COMMERCIAL -->
+    <section class="commercial">
+        <div class="container">
+            <div class="commercial__list">
+                <div class="commercial__item">
+                    <a href="" class="commercial__banner">
+                        <img src="./img/ban-phim-co.png" alt="">
+                    </a>
+                </div>
+                <div class="commercial__item">
+                    <a href="" class="commercial__banner">
+                        <img src="./img/may-doc-sach.png" alt="">
+                    </a>
+                </div>
+                <div class="commercial__item">
+                    <a href="" class="commercial__banner">
+                        <img src="./img/dong-ho-garmin.png" alt="">
+                    </a>
+                </div>
+                <div class="commercial__item">
+                    <a href="" class="commercial__banner">
+                        <img src="./img/1laptop.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- NUMBER -->
-    <section class="number"></section>
+    <section class="bestseller"></section>
     <!-- OFFER -->
     <section class="offer"></section>
     <!-- FEATURED -->
