--- a/index.html
+++ b/index.html
@@ -227,24 +227,126 @@
     <!-- NUMBER -->
     <section class="bestseller">
         <div class="container">
-            <div class="slider">
-                <div>
-                    <h3>1</h3>
-                </div>
-                <div>
-                    <h3>2</h3>
-                </div>
-                <div>
-                    <h3>3</h3>
-                </div>
-                <div>
-                    <h3>4</h3>
-                </div>
-                <div>
-                    <h3>5</h3>
-                </div>
-                <div>
-                    <h3>6</h3>
+            <div class="bestseller__content">
+                <ul class="nav nav-tabs" id="gadgetsTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="new-tab" data-bs-toggle="tab" data-bs-target="#new-tab-pane"
+                            type="button" role="tab" aria-controls="new-tab-pane" aria-selected="true">Sản phẩm
+                            mới</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link selling" id="selling-tab" data-bs-toggle="tab"
+                            data-bs-target="#selling-tab-pane" type="button" role="tab" aria-controls="selling-tab-pane"
+                            aria-selected="false">Bán
+                            chạy</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link promotion" id="promotion-tab" data-bs-toggle="tab"
+                            data-bs-target="#promotion-tab-pane" type="button" role="tab"
+                            aria-controls="promotion-tab-pane" aria-selected="false">Khuyến mãi</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="gadgetsTabContent">
+                    <div class="tab-pane fade show active" id="new-tab-pane" role="tabpanel" aria-labelledby="new-tab"
+                        tabindex="0">
+                        <div class="bestseller__slider">
+                            <div class="bestseller__item">
+                                <a class="bestseller__card" href="">
+                                    <div class="card">
+                                        <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Dahua DHI-LM24-E231 - 23.8in FHD IPS</h5>
+                                            <div class="card-discount d-flex">
+                                                <p class="card-new">7.900.000 <span class="vnd">đ</span></p>
+                                                <span class="card-sale">Sale 10%</span>
+                                            </div>
+                                            <p class="card-old">9.900.000 <span class="vnd">đ</span></p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="bestseller__item">
+                                <a class="bestseller__card" href="">
+                                    <div class="card">
+                                        <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-new"></p>
+                                            <p class="card-old"></p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="bestseller__item">
+                                <a class="bestseller__card" href="">
+                                    <div class="card">
+                                        <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-new"></p>
+                                            <p class="card-old"></p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="bestseller__item">
+                                <a class="bestseller__card" href="">
+                                    <div class="card">
+                                        <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-new"></p>
+                                            <p class="card-old"></p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="bestseller__item">
+                                <a class="bestseller__card" href="">
+                                    <div class="card">
+                                        <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-new"></p>
+                                            <p class="card-old"></p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="bestseller__item">
+                                <a class="bestseller__card" href="">
+                                    <div class="card">
+                                        <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-new"></p>
+                                            <p class="card-old"></p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="bestseller__item">
+                                <a class="bestseller__card" href="">
+                                    <div class="card">
+                                        <img src="./img/products/pc-1.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-new"></p>
+                                            <p class="card-old"></p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="selling-tab-pane" role="tabpanel" aria-labelledby="selling-tab"
+                        tabindex="0">
+                        ...
+                    </div>
+                    <div class="tab-pane fade" id="promotion-tab-pane" role="tabpanel" aria-labelledby="promotion-tab"
+                        tabindex="0">
+                        ...
+                    </div>
                 </div>
             </div>
         </div>
