code section offer

--- a/index.html
+++ b/index.html
@@ -348,17 +348,35 @@
                         ...
                     </div>
                 </div>
+                <div class="bestseller__showAll">
+                    <a href="" class="btn--show">
+                        <i class="fa fa-plus-circle"></i><span>Xem thêm</span>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
     <!-- OFFER -->
-    <section class="offer"></section>
+    <section class="offer">
+        <div class="container">
+            <div class="offer__content">
+                <div class="offer__info">
+                    <div class="offer__text">
+                        <h1>Macbook Pro M2</h1>
+                        <p>Sau sự thành công của Macbook Pro M1, Apple tiếp tục cho ra mắt phiên bản nâng cấp với con
+                            chip mạnh hơn mang tên Macbook Pro M2 vào năm 2022. Sở hữu một hiệu năng vượt trội với con
+                            chip M2 mang lại cho người dùng những trải nghiệm mới.</p>
+                        <a href="" class="btn--offer"> Xem đề xuất</a>
+                    </div>
+                </div>
+                <div class="offer__img">
+                    <img src="./img/category-laptops.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- FEATURED -->
     <section class="featured"></section>
-    <!-- IPAD -->
-    <section class="ipad"></section>
-    <!-- INFOR -->
-    <section class="infor"></section>
     <!-- NEWS -->
     <section class="news"></section>
     <!-- FOOTER -->
