code section footer

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="cover__info">
                         <div class="cover__text">
                             <p>Chỉ từ 35.000.000<span class="vnd">đ</span></p>
-                            <h2>iPhone 15 Pro</h2>
+                            <h2>iPhone 14 Pro</h2>
                         </div>
                         <div class="cover__btn">
                             <button class="btn--buy">Mua Ngay</button>
@@ -666,17 +666,19 @@
             <div class="footer__content">
                 <div class="footer__row">
                     <div class="footer__social">
-                        <div class="footer__logo"></div>
+                        <div class="footer__logo">
+                            <a href="#"><img src="./img/logo-light.svg" alt=""></a>
+                        </div>
                         <ul class="footer__contact">
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><span>Địa chỉ: </span>QTSC9, Tô Ký, Quận 12, TP Hồ Chí Minh</li>
+                            <li><span>Hotline: </span>1900 7777</li>
+                            <li><span>Thời gian làm việc: </span>8h đến 21h</li>
                         </ul>
                         <div class="footer__icon">
-                            <i class="fa-brands fa-facebook"></i>
-                            <i class="fa-brands fa-linkedin"></i>
-                            <i class="fa-brands fa-twitter"></i>
-                            <i class="fa-brands fa-youtube"></i>
+                            <a href="#"><i style="color: #0766ff;" class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i style="color: #0077b5;" class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i style="color: #179cf0;" class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i style="color: #ff0000;" class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
                     <div class="footer__info">
@@ -699,8 +701,32 @@
                     </div>
                     <div class="footer__payment">
                         <h5>Phương thức thanh toán</h5>
-                        <p></p>
-                        <div class="footer__img"></div>
+                        <div class="footer__img">
+                            <div class="img-item">
+                                <img src="./img/payment/ft-img6.png" alt="">
+                            </div>
+                            <div class="img-item">
+                                <img src="./img/payment/ft-img7.png" alt="">
+                            </div>
+                            <div class="img-item">
+                                <img src="./img/payment/ft-img8.png" alt="">
+                            </div>
+                            <div class="img-item">
+                                <img src="./img/payment/ft-imgamex.png" alt="">
+                            </div>
+                            <div class="img-item">
+                                <img src="./img/payment/ft-img10.png" alt="">
+                            </div>
+                            <div class="img-item">
+                                <img src="./img/payment/ft-img11.png" alt="">
+                            </div>
+                            <div class="img-item">
+                                <img src="./img/payment/ft-img12.png" alt="">
+                            </div>
+                            <div class="img-item">
+                                <img src="./img/payment/ft-img14.png" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
