--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header__top">
             <nav class="gadgetsNavbar navbar navbar-expand-lg">
                 <div class="container">
-                    <a class="navbar-brand" href="#"><img src="./img/logo-light.svg" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="./img/logo-light.svg" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#gadgetsNavbarContent" aria-controls="gadgetsNavbarContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
                                 </a>
                             </div>
                             <div class="right-login">
-                                <a class="right-link" href="">
+                                <a class="right-link" href="login.html">
                                     <i class="fa fa-user"></i>
                                 </a>
                             </div>
