code form login, register and forgot password

--- a/login.html
+++ b/login.html
@@ -113,13 +113,13 @@
         </div>
     </header>
     <!-- LOGIN FORM -->
-    <div class="login">
-        <div class="login__form">
-            <form action="">
+    <div class="form-gadgets login">
+        <div class="form-container login__form">
+            <form class="form-user" action="">
                 <div class="login__content">
                     <label for="email">Email</label><br>
-                    <input type="text" name="email" placeholder="Email"><br>
-                    <label for="password">Password</label><br>
+                    <input type="email" name="email" placeholder="Email"><br>
+                    <label for="password">Mật khẩu</label><br>
                     <input type="password" name="password" placeholder="Mật khẩu">
                 </div>
                 <div class="login__save">
@@ -127,13 +127,13 @@
                     <label for="save">Ghi nhớ tài khoản</label>
                 </div>
                 <div class="login__btn">
-                    <button>Đăng nhập</button>
+                    <button class="btn--login">Đăng nhập</button>
                 </div>
                 <div class="login__forget">
-                    <span>hoặc <a href="#">Quên mật khẩu</a></span>
+                    <span>hoặc <a href="forgotPassword.html">Quên mật khẩu</a></span>
                 </div>
                 <div class="login__register">
-                    <span>Không có tài khoản ? <a href="$">Đăng ký</a></span>
+                    <span>Không có tài khoản ? <a href="register.html">Đăng ký</a></span>
                 </div>
                 <div class="login__social">
                     <div class="login__facebook">
