--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -113,28 +113,18 @@
         </div>
     </header>
     <!-- REGISTER FORM -->
-    <div class="form-gadgets register">
-        <div class="form-container register__form">
+    <div class="form-gadgets forgotPassword">
+        <div class="form-container forgotPassword__form">
             <form class="form-user" action="">
-                <div class="register__content">
-                    <label for="email">Email</label><br>
+                <div class="forgotPassword__content">
+                    <label for="email">Vui lòng nhập địa chỉ Email</label><br>
                     <input type="email" name="email"><br>
-                    <label for="password">Mật khẩu</label><br>
-                    <input type="password" name="password"><br>
-                    <label for="confirmPassword">Xác nhận mật khẩu</label><br>
-                    <input type="password" name="confirmPassword"><br>
-                    <label for="fullName">Họ và tên</label><br>
-                    <input type="text" name="fullName"><br>
                 </div>
-                <div class="register__btn">
-                    <button class="btn--register">Đăng ký</button>
+                <div class="forgotPassword__btn">
+                    <button class="btn--forgotPassword">Lấy lại mật khẩu</button>
                 </div>
-                <div class="register__rule">
-                    <span>Bạn đồng ý với <a href="#">Điều khoản sử dụng</a> và <a href="#">Chính sách bảo mật</a> của
-                        chúng tôi</span>
-                </div>
-                <div class="register__login">
-                    <span>Đã có tài khoản ? <a href="login.html">Đăng nhập</a></span>
+                <div class="forgotPassword__login">
+                    <span>hoặc <a href="login.html">Đăng nhập</a></span>
                 </div>
             </form>
         </div>
