create data.json for project, add img

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="container">
                     <ul class="menu-list d-flex">
                         <li class="menu-item">
-                            <a class="menu-link" href=""><span>Tự build PC</span></a>
+                            <a class="menu-link" href=""><span>Màn hình PC</span></a>
                         </li>
                         <li class="menu-item">
                             <a class="menu-link" href=""><span>Máy tính xách tay</span></a>
@@ -777,95 +777,95 @@
             </div>
         </div>
     </section>
-    <!-- NEWS -->
-    <section class="news">
+    <!-- POSTS -->
+    <section class="posts">
         <div class="container">
-            <div class="news__content">
+            <div class="posts__content">
                 <h2 class="section-text">Tin tức mới nhất</h2>
-                <div class="news__list">
-                    <a class="news__item text-decoration-none" href="">
-                        <div class="news__detail">
-                            <div class="news__img">
-                                <img src="./img/news/asus-expertbook-b9-oled-va-b5-series-ra-mat.jpg" alt="">
+                <div class="posts__list">
+                    <a class="posts__item text-decoration-none" href="">
+                        <div class="posts__detail">
+                            <div class="posts__img">
+                                <img src="./img/posts/asus-expertbook-b9-oled-va-b5-series-ra-mat.jpg" alt="">
                             </div>
-                            <div class="news__info">
-                                <h5 class="news__date">09/09/2023</h5>
-                                <h3 class="news__title">ASUS nâng cấp bộ đôi Laptop ExpertBook B9 OLED và B5 Series với
+                            <div class="posts__info">
+                                <h5 class="posts__date">09/09/2023</h5>
+                                <h3 class="posts__title">ASUS nâng cấp bộ đôi Laptop ExpertBook B9 OLED và B5 Series với
                                     hiệu suất ấn tượng
                                 </h3>
-                                <p class="news__desc">ASUS mới đây vừa nâng cấp máy tính xách tay ExpertBook B9 OLED và
+                                <p class="posts__desc">ASUS mới đây vừa nâng cấp máy tính xách tay ExpertBook B9 OLED và
                                     B5 Series 14 inch.
                                     Các máy tính xách tay mới có bộ xử lý Intel dòng P có hỗ trợ Intel vPro.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="news__item text-decoration-none" href="">
-                        <div class="news__detail">
-                            <div class="news__img">
-                                <img src="./img/news/article-image-6.webp" alt="">
+                    <a class="posts__item text-decoration-none" href="">
+                        <div class="posts__detail">
+                            <div class="posts__img">
+                                <img src="./img/posts/article-image-6.webp" alt="">
                             </div>
-                            <div class="news__info">
-                                <h5 class="news__date">07/09/2023</h5>
-                                <h3 class="news__title">5 mẹo tối ưu card Nvidia GeForce chơi game chất lượng cao</h3>
-                                <p class="news__desc">Các card đồ họa GeForce RTX 40-series và 30-series của Nvidia vốn
+                            <div class="posts__info">
+                                <h5 class="posts__date">07/09/2023</h5>
+                                <h3 class="posts__title">5 mẹo tối ưu card Nvidia GeForce chơi game chất lượng cao</h3>
+                                <p class="posts__desc">Các card đồ họa GeForce RTX 40-series và 30-series của Nvidia vốn
                                     đã rất mạnh, đặc biệt là hiệu suất để chơi game khá khủng.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="news__item text-decoration-none" href="">
-                        <div class="news__detail">
-                            <div class="news__img">
-                                <img src="./img/news/garmin-forerunner-945-so-voi-935-dong-ho-chay-bo-nao-xung-dang-hon.jpg"
+                    <a class="posts__item text-decoration-none" href="">
+                        <div class="posts__detail">
+                            <div class="posts__img">
+                                <img src="./img/posts/garmin-forerunner-945-so-voi-935-dong-ho-chay-bo-nao-xung-dang-hon.jpg"
                                     alt="">
                             </div>
-                            <div class="news__info">
-                                <h5 class="news__date">06/09/2023</h5>
-                                <h3 class="news__title">Garmin Forerunner 945 so với 935: Đồng hồ chạy bộ nào xứng đáng
+                            <div class="posts__info">
+                                <h5 class="posts__date">06/09/2023</h5>
+                                <h3 class="posts__title">Garmin Forerunner 945 so với 935: Đồng hồ chạy bộ nào xứng đáng
                                     hơn?
                                 </h3>
-                                <p class="news__desc">Forerunner 945 nằm trên dòng sản phẩm Forerunner của Garmin và
+                                <p class="posts__desc">Forerunner 945 nằm trên dòng sản phẩm Forerunner của Garmin và
                                     tràn ngập các tính năng thể thao cũng như chăm sóc sức khỏe.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="news__item text-decoration-none" href="">
-                        <div class="news__detail">
-                            <div class="news__img">
-                                <img src="./img/news/huong-dan-chon-mua-mainboard-phu-hop-may-tinh-cua-ban.jpg" alt="">
+                    <a class="posts__item text-decoration-none" href="">
+                        <div class="posts__detail">
+                            <div class="posts__img">
+                                <img src="./img/posts/huong-dan-chon-mua-mainboard-phu-hop-may-tinh-cua-ban.jpg" alt="">
                             </div>
-                            <div class="news__info">
-                                <h5 class="news__date">04/09/2023</h5>
-                                <h3 class="news__title">Hướng dẫn chọn mua mainboard phù hợp máy tính của bạn</h3>
-                                <p class="news__desc">Bộ xử lý và card đồ họa thường chiếm phần lớn ngân sách xây dựng
+                            <div class="posts__info">
+                                <h5 class="posts__date">04/09/2023</h5>
+                                <h3 class="posts__title">Hướng dẫn chọn mua mainboard phù hợp máy tính của bạn</h3>
+                                <p class="posts__desc">Bộ xử lý và card đồ họa thường chiếm phần lớn ngân sách xây dựng
                                     một dàn PC, bo mạch chủ là một trong những thành phần không thể thiếu trong bộ máy
                                     tính.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="news__item text-decoration-none" href="">
-                        <div class="news__detail">
-                            <div class="news__img">
-                                <img src="./img/news/nen-mua-garmin-venu-3-hay-venu-2-co-tinh-nang-gi-moi.png" alt="">
+                    <a class="posts__item text-decoration-none" href="">
+                        <div class="posts__detail">
+                            <div class="posts__img">
+                                <img src="./img/posts/nen-mua-garmin-venu-3-hay-venu-2-co-tinh-nang-gi-moi.png" alt="">
                             </div>
-                            <div class="news__info">
-                                <h5 class="news__date">03/09/2023</h5>
-                                <h3 class="news__title">Nên mua Garmin Venu 3 hay Venu 2: Có tính năng gì mới?</h3>
-                                <p class="news__desc">Garmin đã công bố dòng đồng hồ thông minh mới là Venu 3 Venu 3S.
+                            <div class="posts__info">
+                                <h5 class="posts__date">03/09/2023</h5>
+                                <h3 class="posts__title">Nên mua Garmin Venu 3 hay Venu 2: Có tính năng gì mới?</h3>
+                                <p class="posts__desc">Garmin đã công bố dòng đồng hồ thông minh mới là Venu 3 Venu 3S.
                                     Để làm nổi bật hoàn toàn các tính năng mới được nâng cấp.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="news__item text-decoration-none" href="">
-                        <div class="news__detail">
-                            <div class="news__img">
-                                <img src="./img/news/huong-dan-dieu-chinh-do-phan-giai-hien-thi-tren-man-hinh-may-tinh.jpg"
+                    <a class="posts__item text-decoration-none" href="">
+                        <div class="posts__detail">
+                            <div class="posts__img">
+                                <img src="./img/posts/huong-dan-dieu-chinh-do-phan-giai-hien-thi-tren-man-hinh-may-tinh.jpg"
                                     alt="">
                             </div>
-                            <div class="news__info">
-                                <h5 class="news__date">01/09/2023</h5>
-                                <h3 class="news__title">Hướng dẫn điều chỉnh độ phân giải hiển thị trên Win 7,8,8.1,10
+                            <div class="posts__info">
+                                <h5 class="posts__date">01/09/2023</h5>
+                                <h3 class="posts__title">Hướng dẫn điều chỉnh độ phân giải hiển thị trên Win 7,8,8.1,10
                                     và 11</h3>
-                                <p class="news__desc">Bài viết sẽ hướng dẫn cách điều chỉnh độ phân giải màn hình máy
+                                <p class="posts__desc">Bài viết sẽ hướng dẫn cách điều chỉnh độ phân giải màn hình máy
                                     tính trên Win 7 đến Win 11. Hy vọng thông tin này sẽ giúp bạn điều chỉnh tại nhà dễ
                                     dàng hơn nhé.</p>
                             </div>
