code page detail product

--- a/detailProduct.html
+++ b/detailProduct.html
@@ -19,6 +19,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet">
+    <!-- FANCYBOX CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -124,8 +126,105 @@
             </div>
             <div class="productIntro__info">
                 <div class="row">
-                    <div class="col-5"></div>
-                    <div class="col-7"></div>
+                    <div class="col-5">
+                        <div class="productIntro__slick">
+                            <div class="productIntro__promotion">Sale 10%</div>
+                            <div class="productIntro__nav">
+                                <div class="nav--item">
+                                    <div class="item--img">
+                                        <img src="./img/products/pc-4/de-1.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="nav--item">
+                                    <div class="item--img">
+                                        <img src="./img/products/pc-4/de-2.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="nav--item">
+                                    <div class="item--img">
+                                        <img src="./img/products/pc-4/de-3.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="nav--item">
+                                    <div class="item--img">
+                                        <img src="./img/products/pc-4/de-4.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="nav--item">
+                                    <div class="item--img">
+                                        <img src="./img/products/pc-4/de-5.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="nav--item">
+                                    <div class="item--img">
+                                        <img src="./img/products/pc-4/de-6.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="nav--item">
+                                    <div class="item--img">
+                                        <img src="./img/products/pc-4/de-7.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="productIntro__slide">
+                                <div class="slide--item">
+                                    <a href="./img/products/pc-4/pc-1.jpg" data-fancybox="gallery">
+                                        <img src="./img/products/pc-4/pc-1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="slide--item">
+                                    <a href="./img/products/pc-4/pc-2.jpg" data-fancybox="gallery">
+                                        <img src="./img/products/pc-4/pc-2.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="slide--item">
+                                    <a href="./img/products/pc-4/pc-3.jpg" data-fancybox="gallery">
+                                        <img src="./img/products/pc-4/pc-3.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="slide--item">
+                                    <a href="./img/products/pc-4/pc-4.jpg" data-fancybox="gallery">
+                                        <img src="./img/products/pc-4/pc-4.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="slide--item">
+                                    <a href="./img/products/pc-4/pc-5.jpg" data-fancybox="gallery">
+                                        <img src="./img/products/pc-4/pc-5.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="slide--item">
+                                    <a href="./img/products/pc-4/pc-6.jpg" data-fancybox="gallery">
+                                        <img src="./img/products/pc-4/pc-6.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="slide--item">
+                                    <a href="./img/products/pc-4/pc-7.jpg" data-fancybox="gallery">
+                                        <img src="./img/products/pc-4/pc-7.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="productIntro__des"></div>
+                        </div>
+                    </div>
+                    <div class="col-7">
+                        <div class="productIntro__detail">
+                            <div class="productIntro__top">
+                                <h1>LG UltraGear 27GR95QE-B.ATV - 26.5in OLED QHD 240Hz 0.03ms</h1>
+                                <div class="productIntro__brand">
+                                    <span>Thương hiệu: </span>
+                                    <a href="#">LG</a>
+                                </div>
+                                <div class="productIntro__id">
+                                    <span>Mã Sản phẩm: </span>
+                                    <span>27GR95QE-B.ATV</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-7"></div>
+                                <div class="col-5"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -229,6 +328,8 @@
         crossorigin="anonymous"></script>
     <!-- SLICK JS -->
     <script src="./js/slick.min.js"></script>
+    <!-- FANCYBOX JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <!-- MAIN JS -->
     <script src="js/main.js"></script>
 </body>
